# MessageBrokerEngine

./: .gitignore  Cargo.toml  Dockerfile  ENHANCEMENTS_COMPLETED.md  OPTIMIZATION_SUMMARY.md  README.md  redis_check.txt
.github/workflows/: azure-kubernetes-service-helm.yml  ci-cd.yml  rust.yml
examples/: performance_benchmark.rs
helm/message-broker-engine/templates/: ingress.yaml  pvc.yaml  serviceaccount.yaml
hostbuilder/: Cargo.toml
hostbuilder/benches/: latency_benchmark.rs  throughput_benchmark.rs
hostbuilder/src/: flow_control.rs  huge_pages.rs  lib.rs  lib_new.rs  simd_acceleration.rs  tcp_optimization.rs  wal.rs
hostbuilder/tests/: integration_tests.rs
k8s/message-broker-engine/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
k8s/message-broker-engine/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  servicemonitor.yaml  tenant-limitrange.yaml  tenant-resourcequota.yaml
logging-engine/ultra-logger/: Cargo.toml
logging-engine/ultra-logger/src/: lib.rs
message-broker-helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-qa.yaml  values.yaml
message-broker-helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  deployments.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  pvc.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
program/: Cargo.toml
program/src/: main.rs
protocol/: Cargo.toml  build.rs
protocol/src/: compression.rs  generated.rs  lib.rs  tenant_topics.rs
protocol/tests/: integration_tests.rs
protos/: messages.proto
publisher/: Cargo.toml
publisher/examples/: deep_profiler.rs  optimized_order_management.rs  performance_validation.rs  udp_optimized_publisher.rs  ultra_fast_order_manager.rs
publisher/src/: cpu_optimization.rs  lib.rs  logging_facade.rs  memory_optimization.rs  optimized_publisher.rs
publisher/tests/: integration_tests.rs  optimization_validation.rs
sdk/python/: README.md  pyproject.toml
sdk/python/messagebroker/: __init__.py  protocol.py  publisher.py  subscriber.py
sdk/python/tests/: __init__.py  test_sdk.py
src/: lib.rs  ultra_production_broker.rs
subscriber/: Cargo.toml
subscriber/src/: lib.rs  logging_facade.rs
subscriber/tests/: integration_tests.rs
tests/: performance_tests.rs
topicmanager/: Cargo.toml
topicmanager/src/: lib.rs  redis_state.rs  routing.rs  ultra_fast.rs
topicmanager/tests/: integration_tests.rs  integration_tests_fixed.rs
