[package]
name = "program"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "program"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostbuilder = { path = "../hostbuilder" }
publisher = { path = "../publisher" }
tokio = { version = "1.38.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }