[package]
name = "program"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "program"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostbuilder = { path = "../hostbuilder" }
publisher = { path = "../publisher" }
tokio = { version = "1.38.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Ultra-Fast Production Optimizations
crossbeam = "0.8"
dashmap = "5.0"
bytes = "1.0"
bincode = "1.3"
socket2 = "0.5"
futures = "0.3"
fastrand = "2.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release-ultra]
inherits = "release"
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "fat"
debug = false
overflow-checks = false