[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.1"
prost-types = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
flate2 = "1.0"
lz4 = "1.26"
ultra-logger = { path = "../../LoggingEngine/ultra-logger" }
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.13.1"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-test = "0.4"
serial_test = "3.0"