[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1"
mockall = "0.12.1"
prost = "0.13.1"
protocol = { path = "../protocol" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.40"
libc = "0.2"
crossbeam = "0.8"
parking_lot = "0.12"
thiserror = "1.0"

# Optional Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase"] }

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
memmap2 = "0.9"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
flatbuffers = "24.3"
chrono = "0.4"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.13.1"
