[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1"
mockall = "0.12.1"
prost = "0.13.1"
protocol = { path = "../protocol" }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"

[build-dependencies]
prost-build = "0.13.1"
