[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1"
mockall = "0.12.1"
prost = "0.13.1"
protocol = { path = "../protocol" }
spin_sleep = "1.3.1"
libc = "0.2"
crossbeam = "0.8"
parking_lot = "0.12"
memmap2 = "0.9"
crossbeam-queue = "0.3"

# Logging
ultra-logger = { path = "../../LoggingEngine/ultra-logger" }
once_cell = "1.0"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
tokio = { version = "1.45.1", features = ["full"] }
crossbeam-utils = "0.8"
flatbuffers = "24.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
prost-build = "0.13.1"
