[package]
name = "topicmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.19", features = ["serde"] }
deadpool = "0.12.1"
deadpool-redis = { version = "0.15.1", features = ["serde"] }
mockall = "0.12.1"
prost = "0.13.1"
protocol = { path = "../protocol" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[build-dependencies]
prost-build = "0.13.1"