[package]
name = "topicmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
deadpool = "0.12.1"
deadpool-redis = { version = "0.15.1", features = ["serde"] }
futures = "0.3.31"
mockall = "0.12.1"
parking_lot = "0.12"
prost = "0.13.1"
protocol = { path = "../protocol" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
regex = "1.10"
wildmatch = "2.3"
fxhash = "0.2"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
libc = "0.2"
crossbeam = "0.8"
memmap2 = "0.9"
flatbuffers = "24.3"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[build-dependencies]
prost-build = "0.13.1"
