[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "messagebroker"
version = "0.1.0"
description = "Python SDK for MessageBrokerEngine — ultra-high performance message broker"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["message-broker", "trading", "pub-sub", "high-performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
protobuf = ["protobuf>=4.0"]
dev = ["pytest>=7.0", "pytest-timeout>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["messagebroker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 10
